sca refactoring